--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "verschoof/transip-api": "1.*"
+        "verschoof/transip-api": "@dev"
     },
     "autoload": {
         "psr-0": { "Verschoof\\TransipApiBundle\\": "lib/" }
